--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link href="StyleSheet.css" rel="stylesheet">
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
     <p>Learn about all things Cyber from two wonderful females within the field</p>
