--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <link href="StyleSheet.css" rel="stylesheet">
+  <link href="StyleSheet.css" rel="stylesheet">  
+<div class="tab">
+  <button class="tablinks" onclick=openTab(event, 'Cyber News')">Cyber News</button>
+  <button class="tablinks" onclick="openTab(event, 'Spotlights')">Spotlights</button>
+  <button class="tablinks" onclick="openTab(event, 'Question of the Day')">Question of the Day</button>
+  <button class="tablinks" onclick="openTab(event, 'Employment and School Awareness')">Employment and School Awareness</button>
+</div>
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
     <p>Learn about all things Cyber from two wonderful females within the field</p>
