--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html>
   <link href="StyleSheet.css" rel="stylesheet">  
-<div class="tab">
-  <button class="tablinks" onclick=openTab(event, 'Cyber News')">Cyber News</button>
-  <button class="tablinks" onclick="openTab(event, 'Spotlights')">Spotlights</button>
-  <button class="tablinks" onclick="openTab(event, 'Question of the Day')">Question of the Day</button>
-  <button class="tablinks" onclick="openTab(event, 'Employment and School Awareness')">Employment and School Awareness</button>
-</div>
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <a href="#news">Cyber News</a>
+  <a href="#Spotlight">Spotlights</a>
+  <a href="#QoD">Question of the Day</a>
+  <a href="#employment">Employment and School Awareness</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>  
+ @media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+  /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
     <p>Learn about all things Cyber from two wonderful females within the field</p>
