--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
+  <a href="#index" class="active">Home</a>
   <a href="#news">Cyber News</a>
   <a href="#Spotlight">Spotlights</a>
   <a href="#QoD">Question of the Day</a>
@@ -13,18 +13,10 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
- /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
+ 
 </div>  
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
-    <p></p>
+    <p> </p>
   </body>
 </html>
