--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-  <a href="#index" class="active">Home</a>
-  <a href="#news">Cyber News</a>
-  <a href="#Spotlight">Spotlights</a>
+  <a href="index.html" class="active">Home</a>
+  <a href="news.html">Cyber News</a>
+  <a href="Spotlight.html">Spotlights</a>
   <a href="#QoD">Question of the Day</a>
   <a href="#employment">Employment and School Awareness</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
