--- a/news.html
+++ b/news.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+  <link href="StyleSheet.css" rel="stylesheet">  
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="news.html">Cyber News</a>
+  <a href="Spotlight.html">Spotlights</a>
+  <a href="#QoD">Question of the Day</a>
+  <a href="#employment">Employment and School Awareness</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+ 
+</div>  
+  <body>
+    <h1> Welcome to Cyber-Nomix </h1>
+    <p> This is where you can find all the latest and greatest articles related to all things cyber. </p>
+    <p>Take some time read it through and it if you want to learn or hear about anything else let us know. </p>
+  </body>
+</html>
