--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 <div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
-  <a href="news.html">Cyber News</a>
-  <a href="Spotlight.html">Spotlights</a>
+  <a href="#news">Cyber News</a>
+  <a href="#Spotlight">Spotlights</a>
   <a href="#QoD">Question of the Day</a>
   <a href="#employment">Employment and School Awareness</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
