--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
+  <a href="#index" class="active">Home</a>
   <a href="#news">Cyber News</a>
   <a href="#Spotlight">Spotlights</a>
   <a href="#QoD">Question of the Day</a>
