--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <div class="topnav" id="myTopnav">
   <a href="#index" class="active">Home</a>
-  <a href="https://github.com/Cyber-Nomix/Cyber-Nomix.github.io/blob/548013650fa4b98c0f71053c9296a312b30c53f2/news.html">Cyber News</a>
+  <a href="news.html">Cyber News</a>
   <a href="#Spotlight">Spotlights</a>
   <a href="#QoD">Question of the Day</a>
   <a href="#employment">Employment and School Awareness</a>
