--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-  <a href="#index" class="active">Home</a>
-  <a href="news.html">Cyber News</a>
-  <a href="#Spotlight">Spotlights</a>
-  <a href="#QoD">Question of the Day</a>
-  <a href="#employment">Employment and School Awareness</a>
+  <a href="https://cyber-nomix.github.io" class="active">Home</a>
+  <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
+  <a href="https://cyber-nomix.github.io/Spotlights.html">Spotlights</a>
+  <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
+  <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
