--- a/Spotlight.html
+++ b/Spotlight.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+  <link href="StyleSheet.css" rel="stylesheet">  
+<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<div class="topnav" id="myTopnav">
+  <a href="https://cyber-nomix.github.io" class="active">Home</a>
+  <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
+  <a href="https://cyber-nomix.github.io/Spotlights.html">Spotlights</a>
+  <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
+  <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+ 
+</div>  
+  <body>
+    <h1> Welcome to Cyber-Nomix </h1>
+    <p> </p>
+  </body>
+</html>
