--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 <div class="topnav" id="myTopnav">
   <a href="https://cyber-nomix.github.io" class="active">Home</a>
   <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
-  <a href="https://cyber-nomix.github.io/Spotlights.html">Spotlights</a>
+  <a href="https://cyber-nomix.github.io/Spotlight.html">Spotlights</a>
   <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
   <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
