--- a/Employment.html
+++ b/Employment.html
@@ -17,6 +17,6 @@
 </div>  
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
-    <p> </p>
+    <p>Check out all these opportunities to get started in Cyber!!!</p>
   </body>
 </html>
