--- a/Spotlight.html
+++ b/Spotlight.html
@@ -17,6 +17,7 @@
 </div>  
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
-    <p> </p>
+    <p>Check out our Spotlights!</p>
+    <p>These people have made some major impacts within the field</p>
   </body>
 </html>
