--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   </div>
 </div>
+ document.querySelector(".side-panel-toggle").addEventListener("click", () => {
+  document.querySelector(".wrapper").classList.toggle("side-panel-open");
+});
   <body>
     <h1> Welcome to Cyber-Nomix </h1>
     <p> </p>
