--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <h1> Welcome to Cyber-Nomix </h1>
     <p> </p>
     
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.city {display:none}
+</style>   
 <div class="w3-container">
 <h2>Modal Tabs</h2>
 <p>In this example we add tabbed content inside the modal.</p>
