--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 .city {display:none}
 </style>   
 <div class="w3-container">
-<h2>Modal Tabs</h2>
-<p>In this example we add tabbed content inside the modal.</p>
 
-<button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Tabbed Modal</button>
-
+<script type="text/javascript">
+    $(window).on('load', function() {
+        $('id01').modal('show');
+    });
+  </script>
 <div id="id01" class="w3-modal">
  <div class="w3-modal-content w3-card-4 w3-animate-zoom">
   <header class="w3-container w3-blue"> 
@@ -35,26 +36,20 @@
   </header>
 
   <div class="w3-bar w3-border-bottom">
-   <button class="tablink w3-bar-item w3-button" onclick="openCity(event, 'London')">London</button>
-   <button class="tablink w3-bar-item w3-button" onclick="openCity(event, 'Paris')">Paris</button>
-   <button class="tablink w3-bar-item w3-button" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+   <button class="tablink w3-bar-item w3-button" onclick="openCity(event, 'Olivia')">Olivia</button>
+   <button class="tablink w3-bar-item w3-button" onclick="openCity(event, 'Cherrylita')">Cherrylita</button>
   </div>
 
-  <div id="London" class="w3-container city">
-   <h1>London</h1>
+  <div id="Olivia" class="w3-container city">
+   <h1>Olivia Janssen</h1>
    <p>London is the most populous city in the United Kingdom, with a metropolitan area of over 9 million inhabitants.</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
 
-  <div id="Paris" class="w3-container city">
-   <h1>Paris</h1>
+  <div id="Cherrylita" class="w3-container city">
+   <h1>Cherrylita Turner</h1>
    <p>Paris is the capital of France.</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  </div>
-
-  <div id="Tokyo" class="w3-container city">
-   <h1>Tokyo</h1>
-   <p>Tokyo is the capital of Japan.</p><br>
   </div>
 
   <div class="w3-container w3-light-grey w3-padding">
