--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
 
 <script>
-document.getElementsByClassName("tablink")[0].click();
+ <a class="btn" data-toggle="modal" href="#id01">Launch Modal</a>
 
 function openCity(evt, cityName) {
   var i, x, tablinks;
