--- a/index.html
+++ b/index.html
@@ -2,7 +2,30 @@
 <html lang ="en">
     <link href="StyleSheet.css" rel="stylesheet">  
     <!--<link href= "Modal.js" rel="JavaScript">-->
- <div id="myModal" class="modal fade" role="dialog">
+<head>
+     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <div class="topnav" id="myTopnav">
+        <a href="https://cyber-nomix.github.io" class="active">Home</a>
+         <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
+         <a href="https://cyber-nomix.github.io/Spotlight.html">Spotlights</a>
+         <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
+         <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
+         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+             <i class="fa fa-bars"></i>
+         </a> 
+    </div>
+     <script>
+        $(window).load(function(){        
+         $('#myModal').modal('show');
+          });  
+      </script>
+  
+    </head>
+    
+ <body>
+  <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <!-- Modal content-->
     <div class="modal-content">
@@ -20,25 +43,6 @@
 
   </div>
 </div>
- $(window).load(function(){        
-   $('#myModal').modal('show');
-    });     
-    
- <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<div class="topnav" id="myTopnav">
-  <a href="https://cyber-nomix.github.io" class="active">Home</a>
-  <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
-  <a href="https://cyber-nomix.github.io/Spotlight.html">Spotlights</a>
-  <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
-  <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a> 
-</div>
-  
-  <body>
     <h1> Welcome to Cyber-Nomix </h1>
     <p> </p>
  
