--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html> 
 
-<html lang ="en">
+<html lang ="en-US">
   <head>
     <script>
         $(window).load(function(){        
          $('#myModal').modal('show');
           });  
       </script>
-    <link href="StyleSheet.css" rel="stylesheet">  
-    <!--<link href= "Modal.js" rel="JavaScript">--> 
-    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  </head>      
  <body>
    <div id="myModal" class="modal fade" role="dialog">
@@ -30,18 +26,6 @@
     </div>
 
   </div> 
-    <div class="topnav" id="myTopnav">
-        <a href="https://cyber-nomix.github.io" class="active">Home</a>
-         <a href="https://cyber-nomix.github.io/news.html">Cyber News</a>
-         <a href="https://cyber-nomix.github.io/Spotlight.html">Spotlights</a>
-         <a href="https://cyber-nomix.github.io/QoD.html">Question of the Day</a>
-         <a href="https://cyber-nomix.github.io/Employment.html">Employment and School Awareness</a>
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-             <i class="fa fa-bars"></i>
-         </a> 
-    </div>
-    <h1> Welcome to Cyber-Nomix </h1>
-    <p> </p>
  
   </body>
 </html>
