--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang ="en-US">
   <head>
     <script>
-        $(window).load(function(){        
-         $('#myModal').modal('show');
-          });  
-      </script>
+        $(document).ready(function() {
+        $("#myModal").modal("show");
+        });
+</script>
  </head>      
  <body>
    <div id="myModal" class="modal fade" role="dialog">
