--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 
 <html lang ="en-US">
+  <script src='jquery-3.2.1.min.js'></script>
   <head>
     <script>
         $(document).ready(function() {
