--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> 
 
 <html lang ="en-US">
-  <script src='jquery-3.2.1.min.js'></script>
+
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function() {
         $("#myModal").modal("show");
